sdk-docs_versioned_docs/version-25.0.x/modules/API/Procedures/Types/Types.md
---
id: "Types"
title: "Module: Procedures Types"
sidebar_label: "Types"
---

## Enumerations

- [AllowanceOperation](../../../../enums/API/Procedures/Types/AllowanceOperation/AllowanceOperation.md)
- [ClaimOperation](../../../../enums/API/Procedures/Types/ClaimOperation/ClaimOperation.md)
- [InstructionAffirmationOperation](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md)
- [RoleType](../../../../enums/API/Procedures/Types/RoleType/RoleType.md)
- [SignerKeyRingType](../../../../enums/API/Procedures/Types/SignerKeyRingType/SignerKeyRingType.md)
- [TransferRestrictionType](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md)
- [TxGroup](../../../../enums/API/Procedures/Types/TxGroup/TxGroup.md)

## Interfaces

- [AcceptPrimaryKeyRotationParams](../../../../interfaces/API/Procedures/Types/AcceptPrimaryKeyRotationParams/AcceptPrimaryKeyRotationParams.md)
- [AccountWithSignature](../../../../interfaces/API/Procedures/Types/AccountWithSignature/AccountWithSignature.md)
- [AddAssetRequirementParams](../../../../interfaces/API/Procedures/Types/AddAssetRequirementParams/AddAssetRequirementParams.md)
- [AddClaimsParams](../../../../interfaces/API/Procedures/Types/AddClaimsParams/AddClaimsParams.md)
- [AddInstructionsParams](../../../../interfaces/API/Procedures/Types/AddInstructionsParams/AddInstructionsParams.md)
- [AddInvestorUniquenessClaimParams](../../../../interfaces/API/Procedures/Types/AddInvestorUniquenessClaimParams/AddInvestorUniquenessClaimParams.md)
- [AddSecondaryAccountsParams](../../../../interfaces/API/Procedures/Types/AddSecondaryAccountsParams/AddSecondaryAccountsParams.md)
- [AssetBase](../../../../interfaces/API/Procedures/Types/AssetBase/AssetBase.md)
- [AssetMediatorParams](../../../../interfaces/API/Procedures/Types/AssetMediatorParams/AssetMediatorParams.md)
- [AttestPrimaryKeyRotationParams](../../../../interfaces/API/Procedures/Types/AttestPrimaryKeyRotationParams/AttestPrimaryKeyRotationParams.md)
- [CddProviderRole](../../../../interfaces/API/Procedures/Types/CddProviderRole/CddProviderRole.md)
- [ChildKeyWithAuth](../../../../interfaces/API/Procedures/Types/ChildKeyWithAuth/ChildKeyWithAuth.md)
- [ClaimCountRestrictionValue](../../../../interfaces/API/Procedures/Types/ClaimCountRestrictionValue/ClaimCountRestrictionValue.md)
- [ClaimCountTransferRestrictionInput](../../../../interfaces/API/Procedures/Types/ClaimCountTransferRestrictionInput/ClaimCountTransferRestrictionInput.md)
- [ClaimPercentageRestrictionValue](../../../../interfaces/API/Procedures/Types/ClaimPercentageRestrictionValue/ClaimPercentageRestrictionValue.md)
- [ClaimPercentageTransferRestrictionInput](../../../../interfaces/API/Procedures/Types/ClaimPercentageTransferRestrictionInput/ClaimPercentageTransferRestrictionInput.md)
- [ConfigureDividendDistributionParams](../../../../interfaces/API/Procedures/Types/ConfigureDividendDistributionParams/ConfigureDividendDistributionParams.md)
- [ControllerTransferParams](../../../../interfaces/API/Procedures/Types/ControllerTransferParams/ControllerTransferParams.md)
- [CountTransferRestrictionInput](../../../../interfaces/API/Procedures/Types/CountTransferRestrictionInput/CountTransferRestrictionInput.md)
- [CreateAssetParams](../../../../interfaces/API/Procedures/Types/CreateAssetParams/CreateAssetParams.md)
- [CreateAssetWithTickerParams](../../../../interfaces/API/Procedures/Types/CreateAssetWithTickerParams/CreateAssetWithTickerParams.md)
- [CreateCheckpointScheduleParams](../../../../interfaces/API/Procedures/Types/CreateCheckpointScheduleParams/CreateCheckpointScheduleParams.md)
- [CreateChildIdentitiesParams](../../../../interfaces/API/Procedures/Types/CreateChildIdentitiesParams/CreateChildIdentitiesParams.md)
- [CreateChildIdentityParams](../../../../interfaces/API/Procedures/Types/CreateChildIdentityParams/CreateChildIdentityParams.md)
- [CreateGroupParams](../../../../interfaces/API/Procedures/Types/CreateGroupParams/CreateGroupParams.md)
- [CreateMultiSigParams](../../../../interfaces/API/Procedures/Types/CreateMultiSigParams/CreateMultiSigParams.md)
- [CreateNftCollectionParams](../../../../interfaces/API/Procedures/Types/CreateNftCollectionParams/CreateNftCollectionParams.md)
- [CreateTransactionBatchParams](../../../../interfaces/API/Procedures/Types/CreateTransactionBatchParams/CreateTransactionBatchParams.md)
- [CreateTransactionBatchProcedureMethod](../../../../interfaces/API/Procedures/Types/CreateTransactionBatchProcedureMethod/CreateTransactionBatchProcedureMethod.md)
- [CreateVenueParams](../../../../interfaces/API/Procedures/Types/CreateVenueParams/CreateVenueParams.md)
- [DecreaseAllowanceParams](../../../../interfaces/API/Procedures/Types/DecreaseAllowanceParams/DecreaseAllowanceParams.md)
- [EditClaimsParams](../../../../interfaces/API/Procedures/Types/EditClaimsParams/EditClaimsParams.md)
- [ExecuteManualInstructionParams](../../../../interfaces/API/Procedures/Types/ExecuteManualInstructionParams/ExecuteManualInstructionParams.md)
- [GlobalCollectionKeyInput](../../../../interfaces/API/Procedures/Types/GlobalCollectionKeyInput/GlobalCollectionKeyInput.md)
- [IdentityRole](../../../../interfaces/API/Procedures/Types/IdentityRole/IdentityRole.md)
- [ImmortalProcedureOptValue](../../../../interfaces/API/Procedures/Types/ImmortalProcedureOptValue/ImmortalProcedureOptValue.md)
- [IncreaseAllowanceParams](../../../../interfaces/API/Procedures/Types/IncreaseAllowanceParams/IncreaseAllowanceParams.md)
- [InstructionFungibleLeg](../../../../interfaces/API/Procedures/Types/InstructionFungibleLeg/InstructionFungibleLeg.md)
- [InstructionIdParams](../../../../interfaces/API/Procedures/Types/InstructionIdParams/InstructionIdParams.md)
- [InstructionNftLeg](../../../../interfaces/API/Procedures/Types/InstructionNftLeg/InstructionNftLeg.md)
- [InstructionOffChainLeg](../../../../interfaces/API/Procedures/Types/InstructionOffChainLeg/InstructionOffChainLeg.md)
- [InvestInOfferingParams](../../../../interfaces/API/Procedures/Types/InvestInOfferingParams/InvestInOfferingParams.md)
- [InviteAccountParams](../../../../interfaces/API/Procedures/Types/InviteAccountParams/InviteAccountParams.md)
- [InviteExternalAgentParams](../../../../interfaces/API/Procedures/Types/InviteExternalAgentParams/InviteExternalAgentParams.md)
- [IssueTokensParams](../../../../interfaces/API/Procedures/Types/IssueTokensParams/IssueTokensParams.md)
- [LaunchOfferingParams](../../../../interfaces/API/Procedures/Types/LaunchOfferingParams/LaunchOfferingParams.md)
- [LinkCaDocsParams](../../../../interfaces/API/Procedures/Types/LinkCaDocsParams/LinkCaDocsParams.md)
- [LocalCollectionKeyInput](../../../../interfaces/API/Procedures/Types/LocalCollectionKeyInput/LocalCollectionKeyInput.md)
- [ModifyAssetTrustedClaimIssuersAddSetParams](../../../../interfaces/API/Procedures/Types/ModifyAssetTrustedClaimIssuersAddSetParams/ModifyAssetTrustedClaimIssuersAddSetParams.md)
- [ModifyAssetTrustedClaimIssuersRemoveParams](../../../../interfaces/API/Procedures/Types/ModifyAssetTrustedClaimIssuersRemoveParams/ModifyAssetTrustedClaimIssuersRemoveParams.md)
- [ModifyCaCheckpointParams](../../../../interfaces/API/Procedures/Types/ModifyCaCheckpointParams/ModifyCaCheckpointParams.md)
- [ModifyCorporateActionsAgentParams](../../../../interfaces/API/Procedures/Types/ModifyCorporateActionsAgentParams/ModifyCorporateActionsAgentParams.md)
- [ModifyMultiSigParams](../../../../interfaces/API/Procedures/Types/ModifyMultiSigParams/ModifyMultiSigParams.md)
- [ModifyPrimaryIssuanceAgentParams](../../../../interfaces/API/Procedures/Types/ModifyPrimaryIssuanceAgentParams/ModifyPrimaryIssuanceAgentParams.md)
- [ModifySignerPermissionsParams](../../../../interfaces/API/Procedures/Types/ModifySignerPermissionsParams/ModifySignerPermissionsParams.md)
- [MortalProcedureOptValue](../../../../interfaces/API/Procedures/Types/MortalProcedureOptValue/MortalProcedureOptValue.md)
- [MoveFundsParams](../../../../interfaces/API/Procedures/Types/MoveFundsParams/MoveFundsParams.md)
- [MultiSigProcedureOpt](../../../../interfaces/API/Procedures/Types/MultiSigProcedureOpt/MultiSigProcedureOpt.md)
- [NftControllerTransferParams](../../../../interfaces/API/Procedures/Types/NftControllerTransferParams/NftControllerTransferParams.md)
- [NoArgsProcedureMethod](../../../../interfaces/API/Procedures/Types/NoArgsProcedureMethod/NoArgsProcedureMethod.md)
- [OffChainAffirmationReceipt](../../../../interfaces/API/Procedures/Types/OffChainAffirmationReceipt/OffChainAffirmationReceipt.md)
- [OffChainSignature](../../../../interfaces/API/Procedures/Types/OffChainSignature/OffChainSignature.md)
- [OptionalArgsProcedureMethod](../../../../interfaces/API/Procedures/Types/OptionalArgsProcedureMethod/OptionalArgsProcedureMethod.md)
- [PayDividendsParams](../../../../interfaces/API/Procedures/Types/PayDividendsParams/PayDividendsParams.md)
- [PercentageTransferRestrictionInput](../../../../interfaces/API/Procedures/Types/PercentageTransferRestrictionInput/PercentageTransferRestrictionInput.md)
- [PortfolioCustodianRole](../../../../interfaces/API/Procedures/Types/PortfolioCustodianRole/PortfolioCustodianRole.md)
- [PortfolioId](../../../../interfaces/API/Procedures/Types/PortfolioId/PortfolioId.md)
- [ProcedureAuthorizationStatus](../../../../interfaces/API/Procedures/Types/ProcedureAuthorizationStatus/ProcedureAuthorizationStatus.md)
- [ProcedureMethod](../../../../interfaces/API/Procedures/Types/ProcedureMethod/ProcedureMethod.md)
- [ProcedureOpts](../../../../interfaces/API/Procedures/Types/ProcedureOpts/ProcedureOpts.md)
- [RedeemNftParams](../../../../interfaces/API/Procedures/Types/RedeemNftParams/RedeemNftParams.md)
- [RedeemTokensParams](../../../../interfaces/API/Procedures/Types/RedeemTokensParams/RedeemTokensParams.md)
- [RegisterCustomClaimTypeParams](../../../../interfaces/API/Procedures/Types/RegisterCustomClaimTypeParams/RegisterCustomClaimTypeParams.md)
- [RegisterIdentityParams](../../../../interfaces/API/Procedures/Types/RegisterIdentityParams/RegisterIdentityParams.md)
- [RemoveAssetRequirementParams](../../../../interfaces/API/Procedures/Types/RemoveAssetRequirementParams/RemoveAssetRequirementParams.md)
- [RemoveCheckpointScheduleParams](../../../../interfaces/API/Procedures/Types/RemoveCheckpointScheduleParams/RemoveCheckpointScheduleParams.md)
- [RemoveCorporateActionParams](../../../../interfaces/API/Procedures/Types/RemoveCorporateActionParams/RemoveCorporateActionParams.md)
- [RemoveExternalAgentParams](../../../../interfaces/API/Procedures/Types/RemoveExternalAgentParams/RemoveExternalAgentParams.md)
- [RemoveSecondaryAccountsParams](../../../../interfaces/API/Procedures/Types/RemoveSecondaryAccountsParams/RemoveSecondaryAccountsParams.md)
- [RenamePortfolioParams](../../../../interfaces/API/Procedures/Types/RenamePortfolioParams/RenamePortfolioParams.md)
- [ReserveTickerParams](../../../../interfaces/API/Procedures/Types/ReserveTickerParams/ReserveTickerParams.md)
- [RevokeClaimsParams](../../../../interfaces/API/Procedures/Types/RevokeClaimsParams/RevokeClaimsParams.md)
- [RotatePrimaryKeyParams](../../../../interfaces/API/Procedures/Types/RotatePrimaryKeyParams/RotatePrimaryKeyParams.md)
- [ScopeClaimProof](../../../../interfaces/API/Procedures/Types/ScopeClaimProof/ScopeClaimProof.md)
- [SetAllowanceParams](../../../../interfaces/API/Procedures/Types/SetAllowanceParams/SetAllowanceParams.md)
- [SetAssetDocumentsParams](../../../../interfaces/API/Procedures/Types/SetAssetDocumentsParams/SetAssetDocumentsParams.md)
- [SetAssetRequirementsParams](../../../../interfaces/API/Procedures/Types/SetAssetRequirementsParams/SetAssetRequirementsParams.md)
- [SetClaimCountTransferRestrictionsParams](../../../../interfaces/API/Procedures/Types/SetClaimCountTransferRestrictionsParams/SetClaimCountTransferRestrictionsParams.md)
- [SetClaimPercentageTransferRestrictionsParams](../../../../interfaces/API/Procedures/Types/SetClaimPercentageTransferRestrictionsParams/SetClaimPercentageTransferRestrictionsParams.md)
- [SetCountTransferRestrictionsParams](../../../../interfaces/API/Procedures/Types/SetCountTransferRestrictionsParams/SetCountTransferRestrictionsParams.md)
- [SetCustodianParams](../../../../interfaces/API/Procedures/Types/SetCustodianParams/SetCustodianParams.md)
- [SetGroupPermissionsParams](../../../../interfaces/API/Procedures/Types/SetGroupPermissionsParams/SetGroupPermissionsParams.md)
- [SetPercentageTransferRestrictionsParams](../../../../interfaces/API/Procedures/Types/SetPercentageTransferRestrictionsParams/SetPercentageTransferRestrictionsParams.md)
- [SetPermissionGroupParams](../../../../interfaces/API/Procedures/Types/SetPermissionGroupParams/SetPermissionGroupParams.md)
- [SubsidizeAccountParams](../../../../interfaces/API/Procedures/Types/SubsidizeAccountParams/SubsidizeAccountParams.md)
- [TickerOwnerRole](../../../../interfaces/API/Procedures/Types/TickerOwnerRole/TickerOwnerRole.md)
- [TransactionsParams](../../../../interfaces/API/Procedures/Types/TransactionsParams/TransactionsParams.md)
- [TransferAssetOwnershipParams](../../../../interfaces/API/Procedures/Types/TransferAssetOwnershipParams/TransferAssetOwnershipParams.md)
- [TransferPolyxParams](../../../../interfaces/API/Procedures/Types/TransferPolyxParams/TransferPolyxParams.md)
- [TransferTickerOwnershipParams](../../../../interfaces/API/Procedures/Types/TransferTickerOwnershipParams/TransferTickerOwnershipParams.md)
- [TxData](../../../../interfaces/API/Procedures/Types/TxData/TxData.md)
- [TxGroupParams](../../../../interfaces/API/Procedures/Types/TxGroupParams/TxGroupParams.md)
- [UnlinkChildParams](../../../../interfaces/API/Procedures/Types/UnlinkChildParams/UnlinkChildParams.md)
- [UpdateVenueSignersParams](../../../../interfaces/API/Procedures/Types/UpdateVenueSignersParams/UpdateVenueSignersParams.md)
- [VenueOwnerRole](../../../../interfaces/API/Procedures/Types/VenueOwnerRole/VenueOwnerRole.md)
- [WaivePermissionsParams](../../../../interfaces/API/Procedures/Types/WaivePermissionsParams/WaivePermissionsParams.md)

## Type Aliases

### AddAssetStatParams

Ƭ **AddAssetStatParams**: \{ `ticker`: `string`  } & [`AddCountStatParams`](Types.md#addcountstatparams) \| [`AddPercentageStatParams`](Types.md#addpercentagestatparams) \| [`AddClaimCountStatParams`](Types.md#addclaimcountstatparams) \| [`AddClaimPercentageStatParams`](Types.md#addclaimpercentagestatparams)

#### Defined in

[api/procedures/types.ts:425](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L425)

___

### AddClaimCountStatParams

Ƭ **AddClaimCountStatParams**: [`ClaimCountStatInput`](../../Entities/Types/Types.md#claimcountstatinput) & \{ `type`: [`ScopedCount`](../../../../enums/API/Entities/Types/StatType/StatType.md#scopedcount)  }

#### Defined in

[api/procedures/types.ts:417](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L417)

___

### AddClaimCountTransferRestrictionParams

Ƭ **AddClaimCountTransferRestrictionParams**: [`ClaimCountTransferRestrictionInput`](../../../../interfaces/API/Procedures/Types/ClaimCountTransferRestrictionInput/ClaimCountTransferRestrictionInput.md) & \{ `type`: [`ClaimCount`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimcount)  }

#### Defined in

[api/procedures/types.ts:537](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L537)

___

### AddClaimPercentageStatParams

Ƭ **AddClaimPercentageStatParams**: [`StatClaimIssuer`](../../../../interfaces/API/Entities/Types/StatClaimIssuer/StatClaimIssuer.md) & \{ `type`: [`ScopedBalance`](../../../../enums/API/Entities/Types/StatType/StatType.md#scopedbalance)  }

#### Defined in

[api/procedures/types.ts:421](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L421)

___

### AddClaimPercentageTransferRestrictionParams

Ƭ **AddClaimPercentageTransferRestrictionParams**: [`ClaimPercentageTransferRestrictionInput`](../../../../interfaces/API/Procedures/Types/ClaimPercentageTransferRestrictionInput/ClaimPercentageTransferRestrictionInput.md) & \{ `type`: [`ClaimPercentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimpercentage)  }

#### Defined in

[api/procedures/types.ts:541](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L541)

___

### AddCountStatParams

Ƭ **AddCountStatParams**: [`AddCountStatInput`](../../../../interfaces/API/Entities/Types/AddCountStatInput/AddCountStatInput.md) & \{ `type`: [`Count`](../../../../enums/API/Entities/Types/StatType/StatType.md#count)  }

#### Defined in

[api/procedures/types.ts:409](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L409)

___

### AddCountTransferRestrictionParams

Ƭ **AddCountTransferRestrictionParams**: [`CountTransferRestrictionInput`](../../../../interfaces/API/Procedures/Types/CountTransferRestrictionInput/CountTransferRestrictionInput.md) & \{ `type`: [`Count`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#count)  }

#### Defined in

[api/procedures/types.ts:529](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L529)

___

### AddInstructionParams

Ƭ **AddInstructionParams**: \{ `legs`: [`InstructionLeg`](Types.md#instructionleg)[] ; `mediators?`: (`string` \| [`Identity`](../../../../classes/API/Entities/Identity/Identity.md))[] ; `memo?`: `string` ; `tradeDate?`: `Date` ; `valueDate?`: `Date`  } & \{ `endBlock?`: `BigNumber`  } \| \{ `endAfterBlock?`: `BigNumber`  }

#### Defined in

[api/procedures/types.ts:920](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L920)

___

### AddInstructionWithVenueIdParams

Ƭ **AddInstructionWithVenueIdParams**: [`AddInstructionParams`](Types.md#addinstructionparams) & \{ `venueId`: `BigNumber`  }

#### Defined in

[api/procedures/types.ts:963](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L963)

___

### AddPercentageStatParams

Ƭ **AddPercentageStatParams**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `type` | [`Balance`](../../../../enums/API/Entities/Types/StatType/StatType.md#balance) |

#### Defined in

[api/procedures/types.ts:413](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L413)

___

### AddPercentageTransferRestrictionParams

Ƭ **AddPercentageTransferRestrictionParams**: [`PercentageTransferRestrictionInput`](../../../../interfaces/API/Procedures/Types/PercentageTransferRestrictionInput/PercentageTransferRestrictionInput.md) & \{ `type`: [`Percentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#percentage)  }

#### Defined in

[api/procedures/types.ts:533](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L533)

___

### AddRestrictionParams

Ƭ **AddRestrictionParams**\<`T`\>: `Omit`\<`T` extends [`Count`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#count) ? [`AddCountTransferRestrictionParams`](Types.md#addcounttransferrestrictionparams) : `T` extends [`Percentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#percentage) ? [`AddPercentageTransferRestrictionParams`](Types.md#addpercentagetransferrestrictionparams) : `T` extends [`ClaimCount`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimcount) ? [`AddClaimCountTransferRestrictionParams`](Types.md#addclaimcounttransferrestrictionparams) : [`AddClaimPercentageTransferRestrictionParams`](Types.md#addclaimpercentagetransferrestrictionparams), ``"type"``\>

#### Type parameters

| Name |
| :------ |
| `T` |

#### Defined in

[api/procedures/types.ts:370](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L370)

___

### AffirmAsMediatorParams

Ƭ **AffirmAsMediatorParams**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `expiry?` | `Date` |

#### Defined in

[api/procedures/types.ts:1046](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L1046)

___

### AffirmInstructionParams

Ƭ **AffirmInstructionParams**: `Object`

#### Type declaration

| Name | Type | Description |
| :------ | :------ | :------ |
| `portfolios?` | [`PortfolioLike`](../../Entities/Types/Types.md#portfoliolike)[] | (optional) Portfolios that the signer controls and wants to affirm the instruction **`Note`** if empty, all the legs containing any custodied Portfolios of the signer will be affirmed |
| `receipts?` | [`OffChainAffirmationReceipt`](../../../../interfaces/API/Procedures/Types/OffChainAffirmationReceipt/OffChainAffirmationReceipt.md)[] | (optional) list of offchain receipts required for affirming offchain legs(if any) in the instruction Receipt can be generated using [generateOffChainAffirmationReceipt](../../../../classes/API/Entities/Instruction/Instruction.md#generateoffchainaffirmationreceipt) method |

#### Defined in

[api/procedures/types.ts:1030](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L1030)

___

### AllowIdentityToCreatePortfoliosParams

Ƭ **AllowIdentityToCreatePortfoliosParams**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `did` | [`Identity`](../../../../classes/API/Entities/Identity/Identity.md) \| `string` |

#### Defined in

[api/procedures/types.ts:1704](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L1704)

___

### CollectionKeyInput

Ƭ **CollectionKeyInput**: [`GlobalCollectionKeyInput`](../../../../interfaces/API/Procedures/Types/GlobalCollectionKeyInput/GlobalCollectionKeyInput.md) \| [`LocalCollectionKeyInput`](../../../../interfaces/API/Procedures/Types/LocalCollectionKeyInput/LocalCollectionKeyInput.md)

Global key must be registered. local keys must provide a specification as they are created with the NftCollection

#### Defined in

[api/procedures/types.ts:723](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L723)

___

### GenericPolymeshTransaction

Ƭ **GenericPolymeshTransaction**\<`ProcedureReturnValue`, `ReturnValue`\>: [`PolymeshTransaction`](../../../../classes/Base/PolymeshTransaction/PolymeshTransaction.md)\<`ProcedureReturnValue`, `ReturnValue`\> \| [`PolymeshTransactionBatch`](../../../../classes/Base/PolymeshTransactionBatch/PolymeshTransactionBatch.md)\<`ProcedureReturnValue`, `ReturnValue`\>

#### Type parameters

| Name |
| :------ |
| `ProcedureReturnValue` |
| `ReturnValue` |

#### Defined in

[api/procedures/types.ts:212](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L212)

___

### GetTransferRestrictionReturnType

Ƭ **GetTransferRestrictionReturnType**\<`T`\>: [`ActiveTransferRestrictions`](../../../../interfaces/API/Entities/Types/ActiveTransferRestrictions/ActiveTransferRestrictions.md)\<`T` extends [`Count`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#count) ? [`CountTransferRestriction`](../../../../interfaces/API/Entities/Types/CountTransferRestriction/CountTransferRestriction.md) : `T` extends [`Percentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#percentage) ? [`PercentageTransferRestriction`](../../../../interfaces/API/Entities/Types/PercentageTransferRestriction/PercentageTransferRestriction.md) : `T` extends [`ClaimCount`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimcount) ? [`ClaimCountTransferRestriction`](../../../../interfaces/API/Entities/Types/ClaimCountTransferRestriction/ClaimCountTransferRestriction.md) : [`ClaimPercentageTransferRestriction`](../../../../interfaces/API/Entities/Types/ClaimPercentageTransferRestriction/ClaimPercentageTransferRestriction.md)\>

#### Type parameters

| Name |
| :------ |
| `T` |

#### Defined in

[api/procedures/types.ts:392](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L392)

___

### InputCorporateActionTargets

Ƭ **InputCorporateActionTargets**: [`Modify`](../../../Types/Utils/Utils.md#modify)\<[`CorporateActionTargets`](../../../../interfaces/API/Entities/CorporateActionBase/Types/CorporateActionTargets/CorporateActionTargets.md), \{ `identities`: (`string` \| [`Identity`](../../../../classes/API/Entities/Identity/Identity.md))[]  }\>

Targets of a corporate action in a flexible structure for input purposes

#### Defined in

[api/procedures/types.ts:195](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L195)

___

### InputCorporateActionTaxWithholdings

Ƭ **InputCorporateActionTaxWithholdings**: [`Modify`](../../../Types/Utils/Utils.md#modify)\<[`TaxWithholding`](../../../../interfaces/API/Entities/CorporateActionBase/Types/TaxWithholding/TaxWithholding.md), \{ `identity`: `string` \| [`Identity`](../../../../classes/API/Entities/Identity/Identity.md)  }\>[]

Per-Identity tax withholdings of a corporate action in a flexible structure for input purposes

#### Defined in

[api/procedures/types.ts:205](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L205)

___

### InstructionLeg

Ƭ **InstructionLeg**: [`InstructionFungibleLeg`](../../../../interfaces/API/Procedures/Types/InstructionFungibleLeg/InstructionFungibleLeg.md) \| [`InstructionNftLeg`](../../../../interfaces/API/Procedures/Types/InstructionNftLeg/InstructionNftLeg.md) \| [`InstructionOffChainLeg`](../../../../interfaces/API/Procedures/Types/InstructionOffChainLeg/InstructionOffChainLeg.md)

#### Defined in

[api/procedures/types.ts:918](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L918)

___

### IssueNftParams

Ƭ **IssueNftParams**: `Object`

#### Type declaration

| Name | Type | Description |
| :------ | :------ | :------ |
| `metadata` | [`NftMetadataInput`](Types.md#nftmetadatainput)[] | - |
| `portfolioId?` | `BigNumber` | portfolio to which the NFTCollection will be issued (optional, default is the default portfolio) |

#### Defined in

[api/procedures/types.ts:1155](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L1155)

___

### JoinCreatorParams

Ƭ **JoinCreatorParams**: `JoinCreatorAsPrimary` \| `JoinCreatorAsSecondary`

#### Defined in

[api/procedures/types.ts:1629](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L1629)

___

### ModifyAssetParams

Ƭ **ModifyAssetParams**: \{ `fundingRound?`: `string` ; `identifiers?`: [`SecurityIdentifier`](../../../../interfaces/API/Entities/Asset/Types/SecurityIdentifier/SecurityIdentifier.md)[] ; `makeDivisible?`: ``true`` ; `name`: `string`  } \| \{ `fundingRound?`: `string` ; `identifiers?`: [`SecurityIdentifier`](../../../../interfaces/API/Entities/Asset/Types/SecurityIdentifier/SecurityIdentifier.md)[] ; `makeDivisible`: ``true`` ; `name?`: `string`  } \| \{ `fundingRound`: `string` ; `identifiers?`: [`SecurityIdentifier`](../../../../interfaces/API/Entities/Asset/Types/SecurityIdentifier/SecurityIdentifier.md)[] ; `makeDivisible?`: ``true`` ; `name?`: `string`  } \| \{ `fundingRound?`: `string` ; `identifiers`: [`SecurityIdentifier`](../../../../interfaces/API/Entities/Asset/Types/SecurityIdentifier/SecurityIdentifier.md)[] ; `makeDivisible?`: ``true`` ; `name?`: `string`  }

#### Defined in

[api/procedures/types.ts:1120](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L1120)

___

### ModifyCaDefaultConfigParams

Ƭ **ModifyCaDefaultConfigParams**: \{ `defaultTaxWithholding`: `BigNumber` ; `targets?`: [`InputTargets`](../../Entities/CorporateActionBase/Types/Types.md#inputtargets) ; `taxWithholdings?`: [`InputTaxWithholding`](../../Entities/CorporateActionBase/Types/Types.md#inputtaxwithholding)[]  } \| \{ `defaultTaxWithholding?`: `BigNumber` ; `targets`: [`InputTargets`](../../Entities/CorporateActionBase/Types/Types.md#inputtargets) ; `taxWithholdings?`: [`InputTaxWithholding`](../../Entities/CorporateActionBase/Types/Types.md#inputtaxwithholding)[]  } \| \{ `defaultTaxWithholding?`: `BigNumber` ; `targets?`: [`InputTargets`](../../Entities/CorporateActionBase/Types/Types.md#inputtargets) ; `taxWithholdings`: [`InputTaxWithholding`](../../Entities/CorporateActionBase/Types/Types.md#inputtaxwithholding)[]  }

#### Defined in

[api/procedures/types.ts:1274](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L1274)

___

### ModifyClaimsParams

Ƭ **ModifyClaimsParams**: [`AddClaimsParams`](../../../../interfaces/API/Procedures/Types/AddClaimsParams/AddClaimsParams.md) \| [`EditClaimsParams`](../../../../interfaces/API/Procedures/Types/EditClaimsParams/EditClaimsParams.md) \| [`RevokeClaimsParams`](../../../../interfaces/API/Procedures/Types/RevokeClaimsParams/RevokeClaimsParams.md)

#### Defined in

[api/procedures/types.ts:799](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L799)

___

### ModifyComplianceRequirementParams

Ƭ **ModifyComplianceRequirementParams**: `Object`

#### Type declaration

| Name | Type | Description |
| :------ | :------ | :------ |
| `conditions` | [`InputCondition`](../../Entities/Types/Types.md#inputcondition)[] | array of conditions to replace the existing array of conditions for the requirement (identified by `id`). Conditions within a requirement are *AND* between them. This means that in order for a transfer to comply with this requirement, it must fulfill *ALL* conditions |
| `id` | `BigNumber` | ID of the Compliance Requirement |

#### Defined in

[api/procedures/types.ts:1223](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L1223)

___

### ModifyInstructionAffirmationParams

Ƭ **ModifyInstructionAffirmationParams**: [`InstructionIdParams`](../../../../interfaces/API/Procedures/Types/InstructionIdParams/InstructionIdParams.md) & \{ `operation`: [`Affirm`](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md#affirm)  } & [`AffirmInstructionParams`](Types.md#affirminstructionparams) \| \{ `operation`: [`Withdraw`](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md#withdraw)  } & [`WithdrawInstructionParams`](Types.md#withdrawinstructionparams) \| \{ `operation`: [`Reject`](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md#reject) \| [`RejectAsMediator`](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md#rejectasmediator)  } & [`RejectInstructionParams`](Types.md#rejectinstructionparams) \| \{ `operation`: [`AffirmAsMediator`](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md#affirmasmediator)  } & [`AffirmAsMediatorParams`](Types.md#affirmasmediatorparams) \| \{ `operation`: [`WithdrawAsMediator`](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md#withdrawasmediator) \| [`RejectAsMediator`](../../../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md#rejectasmediator)  }

#### Defined in

[api/procedures/types.ts:1050](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L1050)

___

### ModifyOfferingTimesParams

Ƭ **ModifyOfferingTimesParams**: \{ `end`: `Date` \| ``null`` ; `start?`: `Date`  } \| \{ `end?`: `Date` \| ``null`` ; `start`: `Date`  } \| \{ `end`: `Date` \| ``null`` ; `start`: `Date`  }

#### Defined in

[api/procedures/types.ts:1497](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L1497)

___

### ModifyVenueParams

Ƭ **ModifyVenueParams**: \{ `description?`: `string` ; `type`: [`VenueType`](../../../../enums/API/Entities/Venue/Types/VenueType/VenueType.md)  } \| \{ `description`: `string` ; `type?`: [`VenueType`](../../../../enums/API/Entities/Venue/Types/VenueType/VenueType.md)  } \| \{ `description`: `string` ; `type`: [`VenueType`](../../../../enums/API/Entities/Venue/Types/VenueType/VenueType.md)  }

#### Defined in

[api/procedures/types.ts:1445](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L1445)

___

### MortalityProcedureOpt

Ƭ **MortalityProcedureOpt**: [`ImmortalProcedureOptValue`](../../../../interfaces/API/Procedures/Types/ImmortalProcedureOptValue/ImmortalProcedureOptValue.md) \| [`MortalProcedureOptValue`](../../../../interfaces/API/Procedures/Types/MortalProcedureOptValue/MortalProcedureOptValue.md)

#### Defined in

[api/procedures/types.ts:146](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L146)

___

### NftMetadataInput

Ƭ **NftMetadataInput**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `id` | `BigNumber` |
| `type` | [`MetadataType`](../../../../enums/API/Entities/MetadataEntry/Types/MetadataType/MetadataType.md) |
| `value` | `string` |

#### Defined in

[api/procedures/types.ts:1149](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L1149)

___

### RegisterMetadataParams

Ƭ **RegisterMetadataParams**: \{ `name`: `string` ; `specs`: [`MetadataSpec`](../../../../interfaces/API/Entities/MetadataEntry/Types/MetadataSpec/MetadataSpec.md)  } \| \{ `details?`: [`MetadataValueDetails`](../../Entities/MetadataEntry/Types/Types.md#metadatavaluedetails) ; `name`: `string` ; `specs`: [`MetadataSpec`](../../../../interfaces/API/Entities/MetadataEntry/Types/MetadataSpec/MetadataSpec.md) ; `value`: `string`  }

#### Defined in

[api/procedures/types.ts:1635](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L1635)

___

### RejectInstructionParams

Ƭ **RejectInstructionParams**: `Object`

#### Type declaration

| Name | Type | Description |
| :------ | :------ | :------ |
| `portfolio?` | [`PortfolioLike`](../../Entities/Types/Types.md#portfoliolike) | (optional) Portfolio that the signer controls and wants to reject the instruction |

#### Defined in

[api/procedures/types.ts:980](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L980)

___

### RemoveAssetStatParams

Ƭ **RemoveAssetStatParams**: \{ `ticker`: `string`  } & [`RemoveCountStatParams`](Types.md#removecountstatparams) \| [`RemoveBalanceStatParams`](Types.md#removebalancestatparams) \| [`RemoveScopedCountParams`](Types.md#removescopedcountparams) \| [`RemoveScopedBalanceParams`](Types.md#removescopedbalanceparams)

#### Defined in

[api/procedures/types.ts:402](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L402)

___

### RemoveBalanceStatParams

Ƭ **RemoveBalanceStatParams**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `type` | [`Balance`](../../../../enums/API/Entities/Types/StatType/StatType.md#balance) |

#### Defined in

[api/procedures/types.ts:436](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L436)

___

### RemoveCountStatParams

Ƭ **RemoveCountStatParams**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `type` | [`Count`](../../../../enums/API/Entities/Types/StatType/StatType.md#count) |

#### Defined in

[api/procedures/types.ts:432](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L432)

___

### RemoveScopedBalanceParams

Ƭ **RemoveScopedBalanceParams**: [`StatClaimIssuer`](../../../../interfaces/API/Entities/Types/StatClaimIssuer/StatClaimIssuer.md) & \{ `type`: [`ScopedBalance`](../../../../enums/API/Entities/Types/StatType/StatType.md#scopedbalance)  }

#### Defined in

[api/procedures/types.ts:444](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L444)

___

### RemoveScopedCountParams

Ƭ **RemoveScopedCountParams**: [`StatClaimIssuer`](../../../../interfaces/API/Entities/Types/StatClaimIssuer/StatClaimIssuer.md) & \{ `type`: [`ScopedCount`](../../../../enums/API/Entities/Types/StatType/StatType.md#scopedcount)  }

#### Defined in

[api/procedures/types.ts:440](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L440)

___

### RevokeIdentityToCreatePortfoliosParams

Ƭ **RevokeIdentityToCreatePortfoliosParams**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `did` | [`Identity`](../../../../classes/API/Entities/Identity/Identity.md) \| `string` |

#### Defined in

[api/procedures/types.ts:1708](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L1708)

___

### Role

Ƭ **Role**: [`TickerOwnerRole`](../../../../interfaces/API/Procedures/Types/TickerOwnerRole/TickerOwnerRole.md) \| [`CddProviderRole`](../../../../interfaces/API/Procedures/Types/CddProviderRole/CddProviderRole.md) \| [`VenueOwnerRole`](../../../../interfaces/API/Procedures/Types/VenueOwnerRole/VenueOwnerRole.md) \| [`PortfolioCustodianRole`](../../../../interfaces/API/Procedures/Types/PortfolioCustodianRole/PortfolioCustodianRole.md) \| [`IdentityRole`](../../../../interfaces/API/Procedures/Types/IdentityRole/IdentityRole.md)

#### Defined in

[api/procedures/types.ts:277](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L277)

___

### RotatePrimaryKeyToSecondaryParams

Ƭ **RotatePrimaryKeyToSecondaryParams**: `Object`

#### Type declaration

| Name | Type | Description |
| :------ | :------ | :------ |
| `expiry?` | `Date` | (optional) when the generated authorization should expire |
| `permissions` | [`PermissionsLike`](../../Entities/Types/Types.md#permissionslike) | - |
| `targetAccount` | `string` \| [`Account`](../../../../classes/API/Entities/Account/Account.md) | The Account that should function as the primary key of the newly created Identity. Can be ss58 encoded address or an instance of Account |

#### Defined in

[api/procedures/types.ts:867](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L867)

___

### SetAssetStatParams

Ƭ **SetAssetStatParams**\<`T`\>: `Omit`\<`T` extends [`Count`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#count) ? [`AddCountStatParams`](Types.md#addcountstatparams) : `T` extends [`Percentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#percentage) ? [`AddPercentageStatParams`](Types.md#addpercentagestatparams) : `T` extends [`ClaimCount`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimcount) ? [`AddClaimCountStatParams`](Types.md#addclaimcountstatparams) : [`AddClaimPercentageStatParams`](Types.md#addclaimpercentagestatparams), ``"type"``\>

#### Type parameters

| Name |
| :------ |
| `T` |

#### Defined in

[api/procedures/types.ts:448](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L448)

___

### SetMetadataParams

Ƭ **SetMetadataParams**: \{ `details?`: [`MetadataValueDetails`](../../Entities/MetadataEntry/Types/Types.md#metadatavaluedetails) ; `value`: `string`  } \| \{ `details`: [`MetadataValueDetails`](../../Entities/MetadataEntry/Types/Types.md#metadatavaluedetails)  }

#### Defined in

[api/procedures/types.ts:1631](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L1631)

___

### SetRestrictionsParams

Ƭ **SetRestrictionsParams**\<`T`\>: `Omit`\<`T` extends [`Count`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#count) ? [`SetCountTransferRestrictionsParams`](../../../../interfaces/API/Procedures/Types/SetCountTransferRestrictionsParams/SetCountTransferRestrictionsParams.md) : `T` extends [`Percentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#percentage) ? [`SetPercentageTransferRestrictionsParams`](../../../../interfaces/API/Procedures/Types/SetPercentageTransferRestrictionsParams/SetPercentageTransferRestrictionsParams.md) : `T` extends [`ClaimCount`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimcount) ? [`SetClaimCountTransferRestrictionsParams`](../../../../interfaces/API/Procedures/Types/SetClaimCountTransferRestrictionsParams/SetClaimCountTransferRestrictionsParams.md) : [`SetClaimPercentageTransferRestrictionsParams`](../../../../interfaces/API/Procedures/Types/SetClaimPercentageTransferRestrictionsParams/SetClaimPercentageTransferRestrictionsParams.md), ``"type"``\>

#### Type parameters

| Name |
| :------ |
| `T` |

#### Defined in

[api/procedures/types.ts:381](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L381)

___

### SetVenueFilteringParams

Ƭ **SetVenueFilteringParams**: `Object`

#### Type declaration

| Name | Type |
| :------ | :------ |
| `allowedVenues?` | `BigNumber`[] |
| `disallowedVenues?` | `BigNumber`[] |
| `enabled?` | `boolean` |

#### Defined in

[api/procedures/types.ts:1647](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L1647)

___

### TransactionArray

Ƭ **TransactionArray**\<`ReturnValues`\>: \{ [K in keyof ReturnValues]: GenericPolymeshTransaction\<any, ReturnValues[K]\> }

#### Type parameters

| Name | Type |
| :------ | :------ |
| `ReturnValues` | extends readonly [...unknown[]] |

#### Defined in

[api/procedures/types.ts:216](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L216)

___

### TransferRestriction

Ƭ **TransferRestriction**: \{ `type`: [`Count`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#count) ; `value`: `BigNumber`  } \| \{ `type`: [`Percentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#percentage) ; `value`: `BigNumber`  } \| \{ `type`: [`ClaimCount`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimcount) ; `value`: [`ClaimCountRestrictionValue`](../../../../interfaces/API/Procedures/Types/ClaimCountRestrictionValue/ClaimCountRestrictionValue.md)  } \| \{ `type`: [`ClaimPercentage`](../../../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md#claimpercentage) ; `value`: [`ClaimPercentageRestrictionValue`](../../../../interfaces/API/Procedures/Types/ClaimPercentageRestrictionValue/ClaimPercentageRestrictionValue.md)  }

#### Defined in

[api/procedures/types.ts:480](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L480)

___

### WithdrawInstructionParams

Ƭ **WithdrawInstructionParams**: `Object`

#### Type declaration

| Name | Type | Description |
| :------ | :------ | :------ |
| `portfolios?` | [`PortfolioLike`](../../Entities/Types/Types.md#portfoliolike)[] | (optional) Portfolios that the signer controls and wants to affirm the instruction or withdraw affirmation **`Note`** if empty, all the legs containing any custodied Portfolios of the signer will be affirmed/affirmation will be withdrawn, based on the operation. |

#### Defined in

[api/procedures/types.ts:987](https://github.com/PolymeshAssociation/polymesh-sdk/blob/978e4ded6/src/api/procedures/types.ts#L987)
